; ModuleID = '/home/carl/AnghaBench/tig/src/extr_search.c_find_merge.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_search.c_find_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @find_merge(%struct.view* %0, i32 %1) #0 {
  %3 = alloca %struct.view*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.view* %0, %struct.view** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.view*, %struct.view** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @find_next_merge(%struct.view* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @get_status_message(i32 %9)
  %11 = call i32 @report(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %10)
  ret void
}

declare dso_local i32 @find_next_merge(%struct.view*, i32) #1

declare dso_local i32 @report(i8*, i32) #1

declare dso_local i32 @get_status_message(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
